fix: fix footer gaps

--- a/src/layout/footer/footer.css
+++ b/src/layout/footer/footer.css
@@ -58,6 +58,10 @@
 }
 
 .footer-box__cv-links {
+  gap: 8px;
+}
+
+.footer-box__social-links {
   gap: 10px;
 }
 
